Bugfixes are not included in this changelog. See github:
https://github.com/resident-uhlig/chrome-hyperiums7/issues

2013-12-29 14:30:00 Version 0.3.0
* Added map on trading map page
* Added AvgP for leaving fleet messages
* Added Overview of Army Capacity, Carried Armies and Ground Armies on military page

2013-12-21 20:06:00 Version 0.2.0
* Added link to forum on "last 20 messages" page (for alliances)
* Added sum of Ground AvgP generation to controlled planets summary
* Added notification for install or update of extension
* Added button to drop/enable stasis on military page

2013-12-12 20:25:00 Version 0.1.1
* Bug fixes only

2013-12-12 19:56:00 Version 0.1.0
* Added information about deployed fleets
* Added coordinates to moving fleets
* Added separate link for going to last page of thread
* Added count and display number of backup buddy logins
* Added sum of GA generation to controlled planets summary

2013-11-29 15:44:00 Version 0.0.6
* Added Cache Overview
* Added Update cache with browsing content
* Added landing date/time and auto-drop information to table of incoming fleets
* Added Ground Armies and Carried Armies to Fleet Calculator
* Added Show average Space AvgP and Ground AvgP for Battle Reports
* Added target values (AvgP, Build Costs, Upkeep, TTB) to fleet build center

2013-11-26 21:09:43 Version 0.0.5
* Added changelog
* Added Upkeep in relation to Total Income on cash page
* Added Total gross income, Total income from exploitations and Total income from captive planets to cash page
* Added Automatically go to last page of thread
* Changed to display planet influence after WTR (with tooltip for value before WTR)
* Added Caching of most AJAX requests (except event checking and stats for political map)

2013-11-25 00:32:57 Version 0.0.4
* Added total pop to controlled planets summary
* Added <pre> button
* Added search for planet if no fleet around planet
* Added links and highlights for player names

2013-11-23 21:50:39 Version 0.0.3