@@ -1,6 +1,9 @@
 Bugfixes are not included in this changelog. See github:
 https://github.com/resident-uhlig/chrome-hyperiums7/issues
 
+2014-01-XX XX:XX:XX Version X.X.X
+* Added total upkeep for trading relations, factories, infiltrations and counter-infiltrations on cash page
+
 2013-12-29 14:30:00 Version 0.3.0
 * Added map on trading map page
 * Added AvgP for leaving fleet messages
